--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,8 @@ ext {
 allprojects {
 
   repositories {
+    maven{ url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+    mavenLocal()
     mavenCentral()
   }
 
@@ -853,12 +855,14 @@ project(':core') {
     implementation libs.scalaReflect
     implementation libs.scalaLogging
     implementation libs.slf4jApi
+    implementation libs.slf4jlog4j
+    implementation libs.log4j
     implementation(libs.zookeeper) {
       // Dropwizard Metrics are required by ZooKeeper as of v3.6.0,
       // but the library should *not* be used in Kafka code
       implementation libs.dropwizardMetrics
-      exclude module: 'slf4j-log4j12'
-      exclude module: 'log4j'
+      // exclude module: 'slf4j-log4j12'
+      // exclude module: 'log4j'
     }
     // ZooKeeperMain depends on commons-cli but declares the dependency as `provided`
     implementation libs.commonsCli
