--- a/config/server.properties
+++ b/config/server.properties
@@ -59,7 +59,8 @@ socket.request.max.bytes=104857600
 ############################# Log Basics #############################
 
 # A comma separated list of directories under which to store log files
-log.dirs=/tmp/kafka-logs
+# log.dirs=/tmp/kafka-logs
+log.dirs=data/logs/kafka-logs
 
 # The default number of log partitions per topic. More partitions allow greater
 # parallelism for consumption, but this will also result in more files across
@@ -122,7 +123,7 @@ log.retention.check.interval.ms=300000
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
-zookeeper.connect=localhost:2181
+zookeeper.connect=localhost:2181/kafka
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=18000
