--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ import java.nio.charset.StandardCharsets
 
 buildscript {
   repositories {
+    maven {
+      url 'https://maven.aliyun.com/nexus/content/groups/public/'
+    }
     mavenCentral()
   }
   apply from: "$rootDir/gradle/dependencies.gradle"
