--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ import org.ajoberstar.grgit.Grgit
 
 buildscript {
   repositories {
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+    maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+    maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+    maven { url 'https://plugins.gradle.org/m2/' }
     mavenCentral()
     jcenter()
   }
@@ -36,6 +40,10 @@ allprojects {
   apply plugin: "jacoco"
 
   repositories {
+    maven { url 'https://maven.aliyun.com/repository/public/' }
+    maven { url 'https://maven.aliyun.com/repository/google/'}
+    maven { url 'https://maven.aliyun.com/repository/jcenter/'}
+    mavenLocal()
     mavenCentral()
   }
 
