--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,25 @@ import java.nio.charset.StandardCharsets
 
 buildscript {
   repositories {
+    maven {
+      allowInsecureProtocol = true
+      url 'http://maven.aliyun.com/repository/public/'
+    }
+    maven {
+      allowInsecureProtocol = true
+      url 'http://maven.aliyun.com/nexus/content/groups/public/'
+    }
+    maven {
+      allowInsecureProtocol = true
+      url 'http://maven.aliyun.com/nexus/content/repositories/google'
+    }
+    maven {
+      allowInsecureProtocol = true
+      url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'
+    }
+    maven { url 'https://plugins.gradle.org/m2/' }
     mavenCentral()
+    jcenter()
   }
   apply from: "$rootDir/gradle/dependencies.gradle"
 
@@ -54,6 +72,24 @@ spotless {
 allprojects {
 
   repositories {
+    maven {
+      allowInsecureProtocol = true
+      url 'http://maven.aliyun.com/repository/public/'
+    }
+    maven {
+      allowInsecureProtocol = true
+      url 'http://maven.aliyun.com/nexus/content/groups/public/'
+    }
+    maven {
+      allowInsecureProtocol = true
+      url 'http://maven.aliyun.com/nexus/content/repositories/google'
+    }
+    maven {
+      allowInsecureProtocol = true
+      url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'
+    }
+    maven { url 'https://plugins.gradle.org/m2/' }
+    mavenLocal()
     mavenCentral()
   }
 
